<resources>
    <string name="app_name">BManageApp3</string>
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="code">验证码</string>
    <string name="index">首页</string>
    <string name="menu">菜单</string>
    <string name="me">我的</string>
    <string name="good_afternoon">下午好，</string>
    <string name="welcome_str">欢迎登录班石企业运营管理系统</string>
    <string name="search_text">查找功能</string>
    <string name="last_week_sale">上周销售额</string>
    <string name="last_week_sale_money">2,8926.00</string>
    <string name="general_units">通用单位</string>
    <string name="general_rule">通用规则</string>
    <string name="product_inventory">产品库存</string>
    <string name="total_sale">销售总览</string>
    <string name="three_month">近三月</string>
    <string name="half_year">近半年</string>
    <string name="full_year">近一年</string>
    <string name="update_time">更新时间2020-10-29</string>
    <string name="tv_market">市场</string>
    <string name="tv_warehouse">仓库</string>
    <string name="tv_logistics">物流</string>
    <string name="tv_hr">人资</string>
    <string name="tv_finance">财务</string>
    <string name="tv_user">用户</string>
    <string name="company_name">企业名称</string>
    <string name="hgsm">红光商贸</string>
    <string name="kprq">开票日期</string>
    <string name="kprq_end">2019-11-16</string>
    <string name="fpbh">发票编号</string>
    <string name="fpbh_end">2020122217451234</string>
    <string name="fpxz">发票性质</string>
    <string name="fpxz_end">红光商贸</string>
    <string name="cplx">产品类型</string>
    <string name="cplx_end">采购单</string>
    <string name="ywd">业务单</string>
    <string name="ywd_end">40</string>
    <string name="je">金额（元）</string>
    <string name="je_end">860</string>
    <string name="se">税额（元）</string>
    <string name="se_end">100</string>
    <string name="jshj">价税合计（元）</string>
    <string name="jshj_end">960</string>
    <string name="sfzf">是否作废</string>
    <string name="sfzf_end">正常</string>
    <string name="rzrq">认证日期</string>
    <string name="rzrq_end">2019-11-25</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="close">关闭</string>
    <string name="start_query">开始查询</string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">结束时间:</string>
    <string name="of_depart">所属部门:</string>
    <string name="check_depart">审核部门:</string>
    <string name="yyb">运营部</string>
    <string name="xsb">销售部</string>
    <string name="ppb">品牌部</string>
    <string name="cwb">财务部</string>
</resources>